# School

./: .gitignore  README.md
AI/Lab1/: Controller.py  State.py  Sudoku.py  in2.txt  in3.txt  main.py  test1.txt  test2.txt
AI/Lab2/: EA-example.py  EA.py  PSO-example.py  PSO.py
AMP/ToyLanguageInterpreterFX/: log0.txt  log1.txt  log2.txt  log3.txt  log4.txt  log5.txt  log6.txt  log7.txt
Calcul Numeric/Lab10/: ex1.m  ex2.m  theory.m
Calcul Numeric/Lab2/: ex1.m  ex2.m  ex3.m  ex4.m  ex5.m
Calcul Numeric/Lab3/: ex1.m
Calcul Numeric/Lab6/: ex1.m  ex2.m  ex3.m  ex4.m
Calcul Numeric/Lab7/: ex1.m  ex2.m  ex4.m  ex5.m  theory.m
Calcul Numeric/Lab8/: ex1.m  theory.m
Calcul Numeric/Lab9/: ex1.m  ex2.m  ex3.m  ex4.m
DBMS/Test/: Program.cs
Databases/: Lab1.sql  Lab2.sql  Lab3.sql  Lab4.sql  Lab4Structure.sql  Lab5.sql  exam.sql
FLCD/: README.md  language.cobai
Functional and logical programming/: 1.lisp  L1-1.lisp  L1-2.lisp  L1-3.lisp  L1-4.lisp  L1-5.lisp  L2-13.lisp  L2-15.lisp  L3-12.lisp  L3-13.lisp  L3-15.lisp  L3-2.lisp  L3-3.lisp  L3-5.lisp  L3-8.lisp  L3-9.lisp
Functional and logical programming/Lisp/: L1-2.lisp  L1-4.lisp  L2-8.lisp  L3-1.lisp  L3-10.lisp  L3-11.lisp  L3-14.lisp  L3-16.lisp  L3-4.lisp  L3-6.lisp  L3-7.lisp
Functional and logical programming/Prolog/: P1-1.pl  P1-10.pl  P1-11.pl  P1-12.pl  P1-13.pl  P1-14.pl  P1-15.pl  P1-2.pl  P1-3.pl  P1-4.pl  P1-5.pl  P1-6.pl  (+13 more)
Microcontrollers/: .gitignore
Parallel and distributed programming/Lab2/: .gitignore  CMakeLists.txt  Matrix.cpp  Matrix.h  README.md  main.cpp  run_all.sh  run_all2.sh
(+244 files in other folders)
